--- a/District_SO2.html
+++ b/District_SO2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台灣各空品區SO₂濃度趨勢圖</title>
-    <script src="chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <style>
         body {
             font-family: 'Microsoft JhengHei', 'Arial', sans-serif;
