--- a/District_SO2.html
+++ b/District_SO2.html
@@ -2,18 +2,17 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台灣各空品區SO₂濃度趨勢圖</title>
-    <script src="chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <style>
         body { font-family: 'Microsoft JhengHei', 'Arial', sans-serif; background: #f8f9fa; margin: 0; padding: 20px; }
         .container { max-width: 1000px; margin: 0 auto; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); padding: 30px; }
         .title { text-align: center; color: #5a6c7d; font-size: 1.8em; font-weight: 600; margin-bottom: 30px; }
         .chart-container { position: relative; height: 500px; margin-bottom: 30px; }
         .legend-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 20px 0; }
-        .legend-item { display: flex; align-items: center; gap: 10px; padding: 8px 15px; border-radius: 6px; transition: background-color 0.2s ease; cursor: pointer; }
-        .legend-item:hover { background-color: #f5f6f7; }
+        .legend-item { display: flex; align-items: center; gap: 10px; padding: 8px 15px; border-radius: 6px; cursor: pointer; }
         .legend-color { width: 16px; height: 3px; border-radius: 2px; }
         .legend-text { font-size: 14px; color: #5a6c7d; font-weight: 500; }
     </style>
@@ -28,14 +27,12 @@
     </div>
 
     <script>
+    // 為了最高的穩定性，我們仍然保留 window.onload
     window.onload = function() {
         var so2Data = {
-            '北部空品區': [2.12, 1.74, 1.06, 1.02, 1.01],
-            '竹苗空品區': [1.90, 1.87, 1.11, 1.10, 1.11],
-            '中部空品區': [2.26, 2.19, 1.38, 1.40, 1.24],
-            '雲嘉南空品區': [2.25, 2.02, 1.53, 1.49, 1.43],
-            '高屏空品區': [2.35, 2.17, 1.59, 1.46, 1.42],
-            '宜蘭空品區': [1.78, 1.41, 0.87, 0.82, 0.78],
+            '北部空品區': [2.12, 1.74, 1.06, 1.02, 1.01], '竹苗空品區': [1.90, 1.87, 1.11, 1.10, 1.11],
+            '中部空品區': [2.26, 2.19, 1.38, 1.40, 1.24], '雲嘉南空品區': [2.25, 2.02, 1.53, 1.49, 1.43],
+            '高屏空品區': [2.35, 2.17, 1.59, 1.46, 1.42], '宜蘭空品區': [1.78, 1.41, 0.87, 0.82, 0.78],
             '花東空品區': [1.19, 1.14, 0.82, 0.66, 0.86]
         };
         var years = [2020, 2021, 2022, 2023, 2024];
@@ -44,97 +41,68 @@
         
         var datasets = Object.keys(so2Data).map(function(region, index) {
             return {
-                label: region,
-                data: so2Data[region],
-                borderColor: colors[index],
-                backgroundColor: 'rgba(0,0,0,0)',
-                borderWidth: 2.5,
-                fill: false,
-                lineTension: 0.3, // tension 在 v2 中是 lineTension
-                pointRadius: 5,
-                pointHoverRadius: 7,
-                pointBackgroundColor: colors[index],
-                pointBorderColor: '#ffffff',
-                pointBorderWidth: 2
+                label: region, data: so2Data[region], borderColor: colors[index],
+                backgroundColor: 'rgba(0,0,0,0)', borderWidth: 2.5, fill: false, lineTension: 0.3,
+                pointRadius: 5, pointHoverRadius: 7, pointBackgroundColor: colors[index],
+                pointBorderColor: '#ffffff', pointBorderWidth: 2
             };
         });
 
         var chart = new Chart(ctx, {
             type: 'line',
-            data: {
-                labels: years,
-                datasets: datasets
-            },
-            // 【最終修正】: 使用 Chart.js v2 的正確 options 語法
+            data: { labels: years, datasets: datasets },
+            // 【成功要素3】: 使用與 v2.9.4 函式庫完全匹配的語法
             options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                legend: { // 圖例設定直接放在 options 下
-                    display: false 
-                },
-                tooltips: { // 提示框在 v2 中叫做 tooltips
-                    mode: 'index',
-                    intersect: false,
+                responsive: true, maintainAspectRatio: false,
+                legend: { display: false },
+                tooltips: {
+                    mode: 'index', intersect: false,
                     callbacks: {
                         label: function(tooltipItem, data) {
                             var label = data.datasets[tooltipItem.datasetIndex].label || '';
-                            if (label) {
-                                label += ': ';
-                            }
-                            label += tooltipItem.yLabel + ' ppb'; // 在 v2 中使用 yLabel
+                            if (label) { label += ': '; }
+                            label += tooltipItem.yLabel + ' ppb';
                             return label;
                         }
                     }
                 },
-                scales: { // 坐標軸在 v2 中需要指定 xAxes 和 yAxes
-                    xAxes: [{
-                        scaleLabel: {
-                            display: true,
-                            labelString: '年份'
-                        }
-                    }],
+                scales: {
+                    xAxes: [{ scaleLabel: { display: true, labelString: '年份' } }],
                     yAxes: [{
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'SO₂ 濃度 (ppb)'
-                        },
-                        ticks: {
-                            beginAtZero: true
-                        }
+                        scaleLabel: { display: true, labelString: 'SO₂ 濃度 (ppb)' },
+                        ticks: { beginAtZero: true }
                     }]
                 }
             }
         });
 
-        // 自定義圖例生成函式
+        // 自定義圖例功能
         function generateCustomLegend() {
             var legendContainer = document.getElementById('customLegend');
             legendContainer.innerHTML = '';
-            var datasets = chart.data.datasets;
-            for (var i = 0; i < datasets.length; i++) {
+            chart.data.datasets.forEach(function(dataset, index) {
                 var legendItem = document.createElement('div');
                 legendItem.className = 'legend-item';
                 var colorBox = document.createElement('div');
                 colorBox.className = 'legend-color';
-                colorBox.style.backgroundColor = datasets[i].borderColor;
+                colorBox.style.backgroundColor = dataset.borderColor;
                 var label = document.createElement('span');
                 label.className = 'legend-text';
-                label.textContent = datasets[i].label;
+                label.textContent = dataset.label;
                 legendItem.appendChild(colorBox);
                 legendItem.appendChild(label);
+                
+                var meta = chart.getDatasetMeta(index);
+                legendItem.style.opacity = meta.hidden ? '0.4' : '1';
 
-                // 使用閉包來正確地傳遞 index
-                (function(index) {
-                    legendItem.onclick = function() {
-                        var meta = chart.getDatasetMeta(index);
-                        // v2 的隱藏邏輯
-                        meta.hidden = meta.hidden === null ? !chart.data.datasets[index].hidden : null;
-                        legendItem.style.opacity = meta.hidden ? '0.4' : '1';
-                        chart.update();
-                    };
-                })(i);
+                legendItem.onclick = function() {
+                    var meta = chart.getDatasetMeta(index);
+                    meta.hidden = meta.hidden === null ? !chart.data.datasets[index].hidden : null;
+                    legendItem.style.opacity = meta.hidden ? '0.4' : '1';
+                    chart.update();
+                };
                 legendContainer.appendChild(legendItem);
-            }
+            });
         }
         generateCustomLegend();
     };
