--- a/District_SO2.html
+++ b/District_SO2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台灣各空品區SO₂濃度趨勢圖</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+    <script src="chart.min.js"></script>
     <style>
         body { font-family: 'Microsoft JhengHei', 'Arial', sans-serif; background: #f8f9fa; margin: 0; padding: 20px; }
         .container { max-width: 1000px; margin: 0 auto; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); padding: 30px; }
@@ -27,7 +27,6 @@
     </div>
 
     <script>
-    // 為了最高的穩定性，我們仍然保留 window.onload
     window.onload = function() {
         var so2Data = {
             '北部空品區': [2.12, 1.74, 1.06, 1.02, 1.01], '竹苗空品區': [1.90, 1.87, 1.11, 1.10, 1.11],
@@ -51,7 +50,6 @@
         var chart = new Chart(ctx, {
             type: 'line',
             data: { labels: years, datasets: datasets },
-            // 【成功要素3】: 使用與 v2.9.4 函式庫完全匹配的語法
             options: {
                 responsive: true, maintainAspectRatio: false,
                 legend: { display: false },
@@ -76,7 +74,6 @@
             }
         });
 
-        // 自定義圖例功能
         function generateCustomLegend() {
             var legendContainer = document.getElementById('customLegend');
             legendContainer.innerHTML = '';
