--- a/District_SO2.html
+++ b/District_SO2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>台灣各空品區SO₂濃度趨勢圖</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/chart.min.js"></script>
     <style>
         body { font-family: 'Microsoft JhengHei', 'Arial', sans-serif; background: #f8f9fa; margin: 0; padding: 20px; }
         .container { max-width: 1000px; margin: 0 auto; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); padding: 30px; }
