--- a/District_SO2.html
+++ b/District_SO2.html
@@ -4,68 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>台灣各空品區SO₂濃度趨勢圖</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <script src="chart.min.js"></script>
     <style>
-        body { 
-            font-family: 'Microsoft JhengHei', 'Arial', sans-serif; 
-            background: #f8f9fa; 
-            margin: 0; 
-            padding: 20px; 
-            height: 100vh;
-            box-sizing: border-box;
-        }
-        .container { 
-            width: 100%; 
-            height: 100%; 
-            margin: 0 auto; 
-            background: white; 
-            border-radius: 12px; 
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); 
-            padding: 30px; 
-            box-sizing: border-box;
-            display: flex;
-            flex-direction: column;
-        }
-        .title { 
-            text-align: center; 
-            color: #5a6c7d; 
-            font-size: 1.8em; 
-            font-weight: 600; 
-            margin-bottom: 20px;
-            flex-shrink: 0;
-        }
-        .chart-container { 
-            position: relative; 
-            flex: 1;
-            min-height: 0;
-            margin-bottom: 20px; 
-        }
-        .legend-container { 
-            display: flex; 
-            flex-wrap: wrap; 
-            justify-content: center; 
-            gap: 20px; 
-            padding: 15px 0;
-            flex-shrink: 0;
-        }
-        .legend-item { 
-            display: flex; 
-            align-items: center; 
-            gap: 10px; 
-            padding: 8px 15px; 
-            border-radius: 6px; 
-            cursor: pointer; 
-        }
-        .legend-color { 
-            width: 16px; 
-            height: 3px; 
-            border-radius: 2px; 
-        }
-        .legend-text { 
-            font-size: 14px; 
-            color: #5a6c7d; 
-            font-weight: 500; 
-        }
+        body { font-family: 'Microsoft JhengHei', 'Arial', sans-serif; background: #f8f9fa; margin: 0; padding: 20px; }
+        .container { max-width: 1000px; margin: 0 auto; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); padding: 30px; }
+        .title { text-align: center; color: #5a6c7d; font-size: 1.8em; font-weight: 600; margin-bottom: 30px; }
+        .chart-container { position: relative; height: 500px; margin-bottom: 30px; }
+        .legend-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 20px 0; }
+        .legend-item { display: flex; align-items: center; gap: 10px; padding: 8px 15px; border-radius: 6px; cursor: pointer; }
+        .legend-color { width: 16px; height: 3px; border-radius: 2px; }
+        .legend-text { font-size: 14px; color: #5a6c7d; font-weight: 500; }
     </style>
 </head>
 <body>
@@ -79,12 +27,9 @@
 
     <script>
         var so2Data = {
-            '北部空品區': [2.12, 1.74, 1.06, 1.02, 1.01], 
-            '竹苗空品區': [1.90, 1.87, 1.11, 1.10, 1.11],
-            '中部空品區': [2.26, 2.19, 1.38, 1.40, 1.24], 
-            '雲嘉南空品區': [2.25, 2.02, 1.53, 1.49, 1.43],
-            '高屏空品區': [2.35, 2.17, 1.59, 1.46, 1.42], 
-            '宜蘭空品區': [1.78, 1.41, 0.87, 0.82, 0.78],
+            '北部空品區': [2.12, 1.74, 1.06, 1.02, 1.01], '竹苗空品區': [1.90, 1.87, 1.11, 1.10, 1.11],
+            '中部空品區': [2.26, 2.19, 1.38, 1.40, 1.24], '雲嘉南空品區': [2.25, 2.02, 1.53, 1.49, 1.43],
+            '高屏空品區': [2.35, 2.17, 1.59, 1.46, 1.42], '宜蘭空品區': [1.78, 1.41, 0.87, 0.82, 0.78],
             '花東空品區': [1.19, 1.14, 0.82, 0.66, 0.86]
         };
         var years = [2020, 2021, 2022, 2023, 2024];
@@ -93,18 +38,10 @@
         
         var datasets = Object.keys(so2Data).map(function(region, index) {
             return {
-                label: region, 
-                data: so2Data[region], 
-                borderColor: colors[index],
-                backgroundColor: 'rgba(0,0,0,0)', 
-                borderWidth: 2.5, 
-                fill: false, 
-                tension: 0.3,
-                pointRadius: 5, 
-                pointHoverRadius: 7, 
-                pointBackgroundColor: colors[index],
-                pointBorderColor: '#ffffff', 
-                pointBorderWidth: 2
+                label: region, data: so2Data[region], borderColor: colors[index],
+                backgroundColor: 'rgba(0,0,0,0)', borderWidth: 2.5, fill: false, lineTension: 0.3,
+                pointRadius: 5, pointHoverRadius: 7, pointBackgroundColor: colors[index],
+                pointBorderColor: '#ffffff', pointBorderWidth: 2
             };
         });
 
@@ -112,48 +49,25 @@
             type: 'line',
             data: { labels: years, datasets: datasets },
             options: {
-                responsive: true, 
-                maintainAspectRatio: false,
-                plugins: {
-                    legend: { display: false },
-                    tooltip: {
-                        mode: 'index', 
-                        intersect: false,
-                        callbacks: {
-                            label: function(context) {
-                                return context.dataset.label + ': ' + context.parsed.y + ' ppb';
-                            }
+                responsive: true, maintainAspectRatio: false,
+                legend: { display: false },
+                tooltips: {
+                    mode: 'index', intersect: false,
+                    callbacks: {
+                        label: function(tooltipItem, data) {
+                            var label = data.datasets[tooltipItem.datasetIndex].label || '';
+                            if (label) { label += ': '; }
+                            label += tooltipItem.yLabel + ' ppb';
+                            return label;
                         }
                     }
                 },
                 scales: {
-                    x: { 
-                        title: { 
-                            display: true, 
-                            text: '年份',
-                            color: '#5a6c7d'
-                        },
-                        ticks: {
-                            color: '#5a6c7d'
-                        },
-                        grid: {
-                            color: 'rgba(90, 108, 125, 0.1)'
-                        }
-                    },
-                    y: {
-                        title: { 
-                            display: true, 
-                            text: 'SO₂ 濃度 (ppb)',
-                            color: '#5a6c7d'
-                        },
-                        ticks: { 
-                            beginAtZero: true,
-                            color: '#5a6c7d'
-                        },
-                        grid: {
-                            color: 'rgba(90, 108, 125, 0.1)'
-                        }
-                    }
+                    xAxes: [{ scaleLabel: { display: true, labelString: '年份' } }],
+                    yAxes: [{
+                        scaleLabel: { display: true, labelString: 'SO₂ 濃度 (ppb)' },
+                        ticks: { beginAtZero: true }
+                    }]
                 }
             }
         });
