--- a/District_NO2.html
+++ b/District_NO2.html
@@ -82,7 +82,7 @@
         };
         // --- 【數據合併邏輯結束】 ---
 
-        var colors = ['#778DA9', '#D6A2AD', '#E0BBE4', '#95B8D1', '#B7B7B7'];
+        var colors = ['#728A7A', '#E4745E', '#927157', '#8592A2', '#EC8F3F'];
         var ctx = document.getElementById('no2Chart').getContext('2d');
         
         var datasets = Object.keys(mergedData).map(function(region, index) {
