--- a/Power_compare.html
+++ b/Power_compare.html
@@ -73,12 +73,15 @@
             type: 'line',
             data: { labels: years, datasets: datasets },
             options: {
-                responsive: true, maintainAspectRatio: false,
+                responsive: true,
+                maintainAspectRatio: false,
                 
-                // 【新增】: 明確定義動畫效果，以覆蓋預設行為
+                // 【最終修正】: 強制在響應式繪製時也啟用動畫
+                responsiveAnimationDuration: 1200, // 設定與主動畫相同的時間
+
                 animation: {
-                    duration: 1200, // 動畫持續時間 (毫秒)，數值越大動畫越慢
-                    easing: 'easeOutQuart' // 動畫的緩動效果 (可選)
+                    duration: 1200,
+                    easing: 'easeOutQuart'
                 },
                 
                 layout: { padding: { left: 15, right: 25, top: 15, bottom: 10 } },
